update Home page GUI

--- a/LogisticsWeb/Views/Shared/_Layout.cshtml
+++ b/LogisticsWeb/Views/Shared/_Layout.cshtml
@@ -1,54 +1,171 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - LogisticsWeb</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="Bootstrap, Landing page, Template, Business, Service">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="author" content="HuyLe">
+    <title>@ViewData["Title"] - MineeLogistics</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/LogisticsWeb.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="~/lib/toastr/toastr.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--====== Favicon Icon ======-->
+    <link rel="shortcut icon" href="~/img/intro.png" type="image/png">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="~/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/css/animate.css">
+    <link rel="stylesheet" href="~/css/LineIcons.css">
+    <link rel="stylesheet" href="~/css/owl.carousel.css">
+    <link rel="stylesheet" href="~/css/owl.theme.css">
+    <link rel="stylesheet" href="~/css/magnific-popup.css">
+    <link rel="stylesheet" href="~/css/nivo-lightbox.css">
+    <link rel="stylesheet" href="~/css/main.css">
+    <link rel="stylesheet" href="~/css/responsive.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">LogisticsWeb</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+    <!-- Header Section Start -->
+    <header id="home" class="hero-area">
+        <nav class="navbar navbar-expand-md bg-white scrolling-navbar">
+            <div class="container">
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index"><img src="~/img/logo/logo.png"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="lni-menu"></i>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav mr-auto w-100 justify-content-end">
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link page-scroll text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Category" asp-action="Index">Category</a>
-                        </li>
-                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link page-scroll text-dark" asp-controller="Category" asp-action="Index">Blog</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <!-- Header Section End -->
+
+    <div>
+        <main role="main" class="pb-0">
+            <partial name="_Notification"></partial>
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer bg-primary text-muted">
-        <div class="container">
-            Made with <i class="bi bi-heart-fill"></i> by Huy Le
-        </div>
+    <!-- Footer Section Start -->
+    <footer>
+        <!-- Footer Area Start -->
+        <section id="footer-Content">
+            <div class="container">
+                <!-- Start Row -->
+                <div class="row">
+
+                    <!-- Start Col -->
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+
+                        <div class="footer-logo">
+                            <img src="~/img/logo.png" alt="">
+                        </div>
+                    </div>
+                    <!-- End Col -->
+                    <!-- Start Col -->
+                    <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+                        <div class="widget">
+                            <h3 class="block-title">Company</h3>
+                            <ul class="menu">
+                                <li><a href="#">  - About Us</a></li>
+                                <li><a href="#">- Career</a></li>
+                                <li><a href="#">- Blog</a></li>
+                                <li><a href="#">- Press</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- End Col -->
+                    <!-- Start Col -->
+                    <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+                        <div class="widget">
+                            <h3 class="block-title">Product</h3>
+                            <ul class="menu">
+                                <li><a href="#">  - Customer Service</a></li>
+                                <li><a href="#">- Enterprise</a></li>
+                                <li><a href="#">- Price</a></li>
+                                <li><a href="#">- Scurity</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- End Col -->
+                    <!-- Start Col -->
+                    <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+                        <div class="widget">
+                            <h3 class="block-title">Download App</h3>
+                            <ul class="menu">
+                                <li><a href="#">  - Android App</a></li>
+                                <li><a href="#">- IOS App</a></li>
+                                <li><a href="#">- Windows App</a></li>
+                                <li><a href="#">- Play Store</a></li>
+                                <li><a href="#">- IOS Store</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- End Col -->
+                    <!-- Start Col -->
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+                        <div class="widget">
+                            <h3 class="block-title">Subscribe Now</h3>
+                            <p>Appropriately implement calysts for change visa wireless catalysts for change. </p>
+                            <div class="subscribe-area">
+                                <input type="email" class="form-control" placeholder="Enter Email">
+                                <span><i class="lni-chevron-right"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Col -->
+                </div>
+                <!-- End Row -->
+            </div>
+            <!-- Copyright Start  -->
+
+            <div class="copyright">
+                <div class="container">
+                    <!-- Star Row -->
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="site-info text-center">
+                                <p>Created by <a href="https://www.linkedin.com/in/huy-le-808935156/" rel="nofollow">Huy Le</a></p>
+                            </div>
+
+                        </div>
+                        <!-- End Col -->
+                    </div>
+                    <!-- End Row -->
+                </div>
+            </div>
+            <!-- Copyright End -->
+        </section>
+        <!-- Footer area End -->
+
     </footer>
+    <!-- Footer Section End -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="~/js/popper.min.js"></script>
+    <script src="~/js/owl.carousel.js"></script>
+    <script src="~/js/jquery.nav.js"></script>
+    <script src="~/js/scrolling-nav.js"></script>
+    <script src="~/js/jquery.easing.min.js"></script>
+    <script src="~/js/nivo-lightbox.js"></script>
+    <script src="~/js/jquery.magnific-popup.min.js"></script>
+    <script src="~/js/main.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
