update Post model

--- a/LogisticsWeb/Views/Post/Create.cshtml
+++ b/LogisticsWeb/Views/Post/Create.cshtml
@@ -1,9 +1,9 @@
-﻿@model Category
+﻿@model Post
 <div>   
     <form method="post">
         <div class="border p-3 mt-4">
             <div class="row pb-2">
-                <h2>Create Category</h2>
+                <h2>Create Post</h2>
             </div>
             @* <div asp-validation-summary="All"></div> *@
             <div class="mb-3 p-1">
