--- a/LogisticsWeb/Views/Shared/_Layout.cshtml
+++ b/LogisticsWeb/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                             <a class="nav-link page-scroll text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-scroll text-dark" asp-controller="Category" asp-action="Index">Blog</a>
+                            <a class="nav-link page-scroll text-dark" asp-controller="Post" asp-action="Index">Blog</a>
                         </li>
                     </ul>
                 </div>
