--- a/LogisticsWeb/Views/Post/Edit.cshtml
+++ b/LogisticsWeb/Views/Post/Edit.cshtml
@@ -1,26 +1,26 @@
-﻿@model Category
+﻿@model Post
 
 <form method="post">
-    <input asp-for="Id" hidden />
+    <input asp-for="Id" hidden/>
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2>Delete Category</h2>
+            <h2>Edit Post</h2>
         </div>
         @* <div asp-validation-summary="All"></div> *@
         <div class="mb-3 p-1">
             <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" disabled class="form-control" />
+            <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="mb-3 p-1">
             <label asp-for="DisplayOrder" class="p-0"></label>
-            <input asp-for="DisplayOrder" disabled class="form-control" />
+            <input asp-for="DisplayOrder" class="form-control" />
             <span asp-validation-for="DisplayOrder" class="text-danger"></span>
         </div>
 
         <div class="row">
             <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control">Delete</button>
+                <button type="submit" class="btn btn-primary form-control">Update</button>
             </div>
             <div class="col-6 col-md-3">
                 <a asp-action="Index" class="btn btn-outline-secondary form-control">
