--- a/LogisticsWeb/Views/Post/Index.cshtml
+++ b/LogisticsWeb/Views/Post/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Category>
+﻿@model List<Post>
 <div class="container">
     <div class="container">
         <div class="row p-3">
@@ -8,9 +8,9 @@
                 </h2>
             </div>
             <div class="col-6 text-end">
-                <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                <a asp-controller="Post" asp-action="Create" class="btn btn-primary">
                     <i class="bi bi-plus-circle"></i>
-                    Create New Category
+                    Create New Post
                 </a>
             </div>
         </div>
@@ -35,11 +35,11 @@
                     <td>@item.DisplayOrder</td>
                     <td>
                         <div>
-                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">
+                            <a asp-controller="Post" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">
                                 <i class="bi bi-pencil"></i>
                                 Edit
                             </a>
-                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">
+                            <a asp-controller="Post" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">
                                 <i class="bi bi-trash"></i>
                                 Delete
                             </a>
