--- a/LogisticsWeb/Views/Home/Index.cshtml
+++ b/LogisticsWeb/Views/Home/Index.cshtml
@@ -109,7 +109,7 @@
                                 </div>
                                 <div class="team-inner text-center">
                                     <h5 class="team-title">KHAI HẢI QUAN</h5>
-                                    <p>Thông quan hàng nhập khẩu và xuất khẩu nhanh, mối quan hệ hải quan mạnh</p>
+                                    <p>Thông quan hàng nhập khẩu và xuất khẩu nhanh chóng, mối quan hệ hải quan mạnh</p>
                                 </div>
                             </div>
                         </div>
@@ -134,7 +134,7 @@
                                 </div>
                                 <div class="team-inner text-center">
                                     <h5 class="team-title">HÀNG DỰ ÁN</h5>
-                                    <p>Hàng dự án máy móc, lắp đặt máy móc đạt tiêu chuẩn an toàn Nhật Bản</p>
+                                    <p>Hàng dự án máy móc, lắp đặt máy móc theo yêu cầu của khách hàng và đạt tiêu chuẩn an toàn Nhật Bản</p>
                                 </div>
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                                 </div>
                                 <div class="team-inner text-center">
                                     <h5 class="team-title">BIỂN NỘI ĐỊA</h5>
-                                    <p>Vận chuyển Container đường biển nội địa HCM, Hải Phòng, Đà Nẵng giá cạnh tranh</p>
+                                    <p>Vận chuyển Container đường biển nội địa HCM, Hải Phòng, Đà Nẵng... giá cạnh tranh</p>
                                 </div>
                             </div>
                         </div>
@@ -176,7 +176,7 @@
                                 </div>
                                 <div class="team-inner text-center">
                                     <h5 class="team-title">BỘ NỘI ĐỊA</h5>
-                                    <p>Kéo Container nội địa, vận chuyển xe tải kết hợp với hệ thống biển</p>
+                                    <p>Kéo Container và xe tải nội địa, hàng ghép xe nội địa và hàng bộ biển kết hợp giao cho khách hàng</p>
                                 </div>
                             </div>
                         </div>
@@ -601,8 +601,8 @@
                             <div>
                                 <h2 class="section-title">Liên Hệ</h2>
                                 <div class="desc-text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
-                                    <p>eiusmod tempor incididunt ut labore et dolore.</p>
+                                    <p>Quý khách hàng có nhu cầu vận chuyển hàng hóa, dịch vụ khai thuê hải quan vui lòng liên hệ qua <strong>Ms Hà</strong></p>
+                                    <p>SDT: <strong>0886164014</strong>  hoặc Zalo: <strong>0338830714</strong> </p>
                                 </div>
                             </div>
                         </div>
@@ -618,13 +618,13 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" id="name" name="name" placeholder="Name" required data-error="Please enter your name">
+                                        <input type="text" class="form-control" id="name" name="name" placeholder="Tên" required data-error="Please enter your name">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input type="text" placeholder="Subject" id="msg_subject" class="form-control" name="msg_subject" required data-error="Please enter your subject">
+                                        <input type="text" placeholder="Tiêu đề" id="msg_subject" class="form-control" name="msg_subject" required data-error="Please enter your subject">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
@@ -636,17 +636,17 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input type="text" placeholder="Budget" id="budget" class="form-control" name="budget" required data-error="Please enter your Budget">
+                                        <input type="text" placeholder="Số điện thoại" id="budget" class="form-control" name="budget" required data-error="Please enter your Budget">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <textarea class="form-control" id="message" name="message" placeholder="Write Message" rows="4" data-error="Write your message" required></textarea>
+                                        <textarea class="form-control" id="message" name="message" placeholder="Nội dung" rows="4" data-error="Write your message" required></textarea>
                                         <div class="help-block with-errors"></div>
                                     </div>
                                     <div class="submit-button">
-                                        <button class="btn btn-common" id="submit" type="submit">Submit</button>
+                                        <button class="btn btn-common" id="submit" type="submit">Gửi</button>
                                         <div id="msgSubmit" class="h3 hidden"></div>
                                         <div class="clearfix"></div>
                                     </div>
