--- a/LogisticsWeb/Views/Shared/_Layout.cshtml
+++ b/LogisticsWeb/Views/Shared/_Layout.cshtml
@@ -65,69 +65,60 @@
         <!-- Footer Area Start -->
         <section id="footer-Content">
             <div class="container">
-                <!-- Start Row -->
-                <div class="row">
+                <div class="row company-info">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 col-mb-12">
+                        <div class="align-content-center">
+                            <img class="justify-content-end" src="~/img/logo/alphatranlogo.png" alt="Alternate Text" />
+                        </div>
+                    </div>
+                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-mb-12">
+                        <h2>ALPHATRANS GROUP LOGISTICS</h2>
+                        <p>Giấy chứng nhận ĐKKD số 0313384770 do sở kế hoạch và đầu tư thành phố Hồ Chí Minh cấp.</p>
+                        <p>Head Office: 45A Nguyễn Thượng Hiền, Phường 6, Quận Bình Thạnh, Hồ Chí Minh, Việt Nam.</p>
+                    </div>
+                </div>
 
+                <div class="row hightlight">
+                    
+                </div>
+
+                <!-- Start Row -->
+                <div class="row ">
                     <!-- Start Col -->
-                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-mb-12">
 
                         <div class="footer-logo">
-                            <img src="~/img/logo.png" alt="">
+                            <img src="~/img/logo/logo.png" alt="">
                         </div>
                     </div>
                     <!-- End Col -->
                     <!-- Start Col -->
-                    <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+                    <div class="col-lg-3 col-md-3 col-sm-0 col-xs-0 col-mb-0">
                         <div class="widget">
-                            <h3 class="block-title">Company</h3>
+                            <h3 class="block-title">VỀ CHÚNG TÔI</h3>
                             <ul class="menu">
-                                <li><a href="#">  - About Us</a></li>
-                                <li><a href="#">- Career</a></li>
-                                <li><a href="#">- Blog</a></li>
-                                <li><a href="#">- Press</a></li>
+                                <li><a href="#">- Giới thiệu</a></li>
+                                <li><a href="#">- Liên hệ</a></li>
+                                <li><a href="#">- FAQ</a></li>
+                                <li><a href="#">- Chính sách bảo mật</a></li>
                             </ul>
                         </div>
                     </div>
                     <!-- End Col -->
                     <!-- Start Col -->
-                    <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+                    <div class="col-lg-3 col-md-3 col-sm-0 col-xs-0 col-mb-0">
                         <div class="widget">
-                            <h3 class="block-title">Product</h3>
+                            <h3 class="block-title">Dịch vụ nổi bật</h3>
                             <ul class="menu">
-                                <li><a href="#">  - Customer Service</a></li>
-                                <li><a href="#">- Enterprise</a></li>
-                                <li><a href="#">- Price</a></li>
-                                <li><a href="#">- Scurity</a></li>
+                                <li><a href="#">- Hải quan trọn gói</a></li>
+                                <li><a href="#">- Đường biển quốc tế</a></li>
+                                <li><a href="#">- ĐƯờng bay quốc tế</a></li>
+                                <li><a href="#">- Vận chuyển nội địa</a></li>
                             </ul>
                         </div>
                     </div>
                     <!-- End Col -->
-                    <!-- Start Col -->
-                    <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 col-mb-12">
-                        <div class="widget">
-                            <h3 class="block-title">Download App</h3>
-                            <ul class="menu">
-                                <li><a href="#">  - Android App</a></li>
-                                <li><a href="#">- IOS App</a></li>
-                                <li><a href="#">- Windows App</a></li>
-                                <li><a href="#">- Play Store</a></li>
-                                <li><a href="#">- IOS Store</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- End Col -->
-                    <!-- Start Col -->
-                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
-                        <div class="widget">
-                            <h3 class="block-title">Subscribe Now</h3>
-                            <p>Appropriately implement calysts for change visa wireless catalysts for change. </p>
-                            <div class="subscribe-area">
-                                <input type="email" class="form-control" placeholder="Enter Email">
-                                <span><i class="lni-chevron-right"></i></span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End Col -->
+
                 </div>
                 <!-- End Row -->
             </div>
