--- a/LogisticsWeb/wwwroot/css/main.css
+++ b/LogisticsWeb/wwwroot/css/main.css
@@ -624,8 +624,8 @@ button:focus {
     position: relative;
 }
 .hero-area img {
-    width:250px;
-    height:60px;
+    width:300px;
+    height:65px;
 }
 
     .hero-area .overlay {
@@ -1880,9 +1880,28 @@ button:focus {
    Footer section
    ========================================================================== */
 #footer-Content {
-    padding-top: 130px;
+    padding-top: 50px;
     background: #180e29;
 }
+    #footer-Content .company-info img {
+        width: 170px;
+        height: 170px;
+        margin: auto;
+        display: block;
+    }
+    #footer-Content .company-info h2 {
+        color: rgb(210,180,140);
+        font-weight: 700;
+    }
+    #footer-Content .company-info p {
+        color: rgb(210,180,140);
+        font-size: 17px;
+    }
+    #footer-Content .hightlight {
+        border-top: 1px solid rgb(210,180,140);
+        margin-top: 20px;
+        margin-bottom: 60px;
+    }
 
     #footer-Content .footer-logo img {
         padding-top: 70px;
