--- a/LogisticsWeb/Views/Home/Index.cshtml
+++ b/LogisticsWeb/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+
 }
 
-<div class="container-fluid p-0">
-    <body>             
+<div class="container-fluid p-0">             
         <!-- start jumbotro -->
         <section id="jumbotron">
             <div class="container-fluid overlay">
@@ -247,9 +247,9 @@
                     <div class="col-lg-6 col-md-12 pl-4">
                         <div class="business-item-info">
                             <h3>DỊCH VỤ LOGISTICS KHIẾN MỌI THỨ TRỞ NÊN DỄ DÀNG VỚI MỘT CHI PHÍ HỢP LÝ NHẤT</h3>
-                            <p>Nhà cung cấp dịch vụ logistics, vận chuyển Container nội địa và dịch vụ hải quan, và một phần dịch vụ vận chuyển hàng không với chi nhánh rộng khắp tại Việt Nam.</p>
+                            <p>Minee Logistics là nhà cung cấp dịch vụ logistics, vận chuyển container quốc tế, nội địa, vận chuyển bằng đường hàng không, là đại lý hải quan với nhiều chi nhánh tại Việt Nam: Hà Nội, Hải Phòng, Đà Nẵng, Hồ Chí Minh, Bình Dương.</p>
 
-                            <a class="btn btn-common" href="#">Xem Profile</a>
+                            <a class="btn btn-primary" href="#">Xem Profile</a>
                         </div>
                     </div>
                     <!-- End Col -->
@@ -493,35 +493,34 @@
                         <div class="blog-text section-header text-center">
                             <div>
                                 <h2 class="section-title">Bài Viết Mới Nhất</h2>
-@*                                 <div class="desc-text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
-                                    <p>eiusmod tempor incididunt ut labore et dolore.</p>
-                                </div> *@
                             </div>
                         </div>
                     </div>
 
                 </div>
                 <!-- End Row -->
+           
                 <!-- Start Row -->
                 <div class="row">
+                @foreach (var item in Model)
+                {
                     <!-- Start Col -->
                     <div class="col-lg-4 col-md-6 col-xs-12 blog-item">
                         <!-- Blog Item Starts -->
                         <div class="blog-item-wrapper">
                             <div class="blog-item-img">
-                                <a href="single-post.html">
+                                <a asp-action="Details" asp-route-postId="@item.Id">
                                     <img src="img/blog/01.jpg" class="img-fluid" alt="">
                                 </a>
                             </div>
                             <div class="blog-item-text">
                                 <div>
-                                    <h3><a href="single-post.html">Quy trình thủ tục hải quan xuất khẩu cần biết</a></h3>
+                                    <h3><a asp-action="Details" asp-route-postId="@item.Id">@item.Title</a></h3>
                                 </div>
                                 <div>
-                                    <p>Các quy trình hải quan đối với các sản phẩm xuất khẩu gần đây đã có những thay đổi đáng kể...</p>
+                                    <p>@item.Content</p>
                                 </div>
-                                <a href="" class="read-more">5 Min read</a>
+                                <a asp-action="Details" asp-route-postId="@item.Id" class="read-more">5 Min read</a>
                             </div>
                             <div class="author">
                                 <span class="name"><i class="lni-user"></i><a href="#">Đăng bới by Admin</a></span>
@@ -530,62 +529,10 @@
                         </div>
                         <!-- Blog Item Wrapper Ends-->
                     </div>
+                }
                     <!-- End Col -->
-                    <!-- Start Col -->
-                    <div class="col-lg-4 col-md-6 col-xs-12 blog-item">
-                        <!-- Blog Item Starts -->
-                        <div class="blog-item-wrapper">
-                            <div class="blog-item-img">
-                                <a href="single-post.html">
-                                    <img src="img/blog/02.jpg" class="img-fluid" alt="">
-                                </a>
-                            </div>
-                            <div class="blog-item-text">
-                                <div>
-                                    <h3><a href="single-post.html">HS code là gì? Quy tắc sử dụng và Cách tra mã HS code</a></h3>
-                                </div>
-                                <div>
-                                    <p>HS code là gì? HS code là loại mã được sử dụng rất nhiều trong ngành xuất nhập khẩu, từ các loại giấy tờ hải quan đến tờ vận đường biển, chứng nhận xuất xứ…</p>
-                                </div>
-                                <a href="" class="read-more">5 Min read</a>
-                            </div>
-                            <div class="author">
-                                <span class="name"><i class="lni-user"></i><a href="#">Posted by Admin</a></span>
-                                <span class="date float-right"><i class="lni-calendar"></i><a href="#">10 April, 2020</a></span>
-                            </div>
-                        </div>
-                        <!-- Blog Item Wrapper Ends-->
-                    </div>
-                    <!-- End Col -->
-                    <!-- Start Col -->
-                    <div class="col-lg-4 col-md-6 col-xs-12 blog-item">
-                        <!-- Blog Item Starts -->
-                        <div class="blog-item-wrapper">
-                            <div class="blog-item-img">
-                                <a href="single-post.html">
-                                    <img src="img/blog/03.jpg" class="img-fluid" alt="">
-                                </a>
-                            </div>
-                            <div class="blog-item-text">
-                                <div>
-                                    <h3><a href="single-post.html">Thủ tục nhập khẩu son môi</a></h3>
-                                </div>
-                                <div>
-                                    <p>Bạn đang muốn nhập khẩu son môi để kinh doanh tại Việt Nam? Bạn đang tìm đơn vị logistics uy tín cung cấp dịch vụ nhập khẩu son môi về Việt Nam? ...</p>
-                                </div>
-                                <a href="" class="read-more">5 Min read</a>
-                            </div>
-                            <div class="author">
-                                <span class="name"><i class="lni-user"></i><a href="#">Posted by Admin</a></span>
-                                <span class="date float-right"><i class="lni-calendar"></i><a href="#">10 April, 2020</a></span>
-                            </div>
-                        </div>
-                        <!-- Blog Item Wrapper Ends-->
-                    </div>
-                    <!-- End Col -->
-
                 </div>
-                <!-- End Row -->
+                <!-- End Row -->   
             </div>
         </section>
         <!-- blog Section End -->
@@ -613,64 +560,12 @@
                 <!-- Start Row -->
                 <div class="row">
                     <!-- Start Col -->
-                    <div class="col-lg-6 col-md-12">
-                        <form id="contactForm">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" id="name" name="name" placeholder="Tên" required data-error="Please enter your name">
-                                        <div class="help-block with-errors"></div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" placeholder="Tiêu đề" id="msg_subject" class="form-control" name="msg_subject" required data-error="Please enter your subject">
-                                        <div class="help-block with-errors"></div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" id="email" name="email" placeholder="Email" required data-error="Please enter your Email">
-                                        <div class="help-block with-errors"></div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" placeholder="Số điện thoại" id="budget" class="form-control" name="budget" required data-error="Please enter your Budget">
-                                        <div class="help-block with-errors"></div>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <textarea class="form-control" id="message" name="message" placeholder="Nội dung" rows="4" data-error="Write your message" required></textarea>
-                                        <div class="help-block with-errors"></div>
-                                    </div>
-                                    <div class="submit-button">
-                                        <button class="btn btn-common" id="submit" type="submit">Gửi</button>
-                                        <div id="msgSubmit" class="h3 hidden"></div>
-                                        <div class="clearfix"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <!-- End Col -->
-                    <!-- Start Col -->
-                    <div class="col-lg-1">
-                    </div>
-                    <!-- End Col -->
-                    <!-- Start Col -->
-                    <div class="col-lg-4 col-md-12">
+                    <div class="col-lg-12 col-md-12">
                         <div class="contact-img">
-                            <img src="img/contact/01.png" class="img-fluid" alt="">
+                            <img class="mx-auto d-block" src="/img/contact/personal_contact.jpg" alt="Alternate Text" />
                         </div>
+                        
                     </div>
-                    <!-- End Col -->
-                    <!-- Start Col -->
-                    <div class="col-lg-1">
-                    </div>
-                    <!-- End Col -->
-
                 </div>
                 <!-- End Row -->
             </div>
@@ -687,6 +582,5 @@
             <div class="loader" id="loader-1"></div>
         </div>
         <!-- End Preloader -->
-    </body>
 </div>
 <!-- end contact -->
