--- a/LogisticsWeb/Views/Post/Index.cshtml
+++ b/LogisticsWeb/Views/Post/Index.cshtml
@@ -4,7 +4,7 @@
         <div class="row p-3">
             <div class="col-6">
                 <h2 class="text-primary">
-                    Category List
+                    Post List
                 </h2>
             </div>
             <div class="col-6 text-end">
@@ -20,19 +20,19 @@
         <thead>
             <tr>
                 <th>
-                    Category Name 1
+                    Title
                 </th>
                 <th>
-                    Display Order
+                    Content
                 </th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.OrderBy(x => x.DisplayOrder))
+            @foreach (var item in Model)
             {
                 <tr>
-                    <td>@item.Name</td>
-                    <td>@item.DisplayOrder</td>
+                    <td>@item.Title</td>
+                    <td>@item.Content</td>
                     <td>
                         <div>
                             <a asp-controller="Post" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">
