add contact icon

--- a/LogisticsWeb/Views/Home/Index.cshtml
+++ b/LogisticsWeb/Views/Home/Index.cshtml
@@ -582,5 +582,17 @@
             <div class="loader" id="loader-1"></div>
         </div>
         <!-- End Preloader -->
+
+    <!-- Begin social button -->
+    <div class="float-contact">
+        <div class="icon chat-zalo">
+            <a href="https://zalo.me/0338830714" target="_blank"><img title="Chat Zalo" src="~/img/icon/zalo-icon.png" alt="zalo-icon" width="70" height="70" /></a>
+        </div>      
+        <div class="icon call-hotline">
+            <a href="tel:0886164014"><img title="Call Hotline" src="~/img/icon/phone-icon.png" alt="phone-icon" width="70" height="70" /></a>
+        </div>
+    </div>
+    <!-- End social button -->
+
 </div>
 <!-- end contact -->
