--- a/LogisticsWeb/wwwroot/css/main.css
+++ b/LogisticsWeb/wwwroot/css/main.css
@@ -1994,3 +1994,15 @@ button:focus {
             -o-transition: all 300ms;
             transition: all 300ms;
         }
+.float-contact {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    z-index: 99999;
+}
+
+.chat-zalo, .chat-facebook, .call-hotline {
+    display: block;
+    margin-bottom: 6px;
+    line-height: 0;
+}
