--- a/LogisticsWeb/Views/Shared/_Layout.cshtml
+++ b/LogisticsWeb/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     <i class="lni-menu"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav mr-auto w-100 justify-content-end">
+                    <ul class="navbar-nav ml-auto w-70 justify-content-end">
                         <li class="nav-item">
                             <a class="nav-link page-scroll text-dark" asp-area="Customer" asp-controller="Home" asp-action="Index">Trang chủ</a>
                         </li>
