--- a/LogisticsWeb/Views/Shared/_LoginPartial.cshtml
+++ b/LogisticsWeb/Views/Shared/_LoginPartial.cshtml
@@ -17,7 +17,7 @@
 }
 else
 {
-    <li class="nav-item">
+    <li class="nav-item w-200">
         <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Đăng nhập</a>
     </li>
 }
